# Operating-System-Practicum

./: CMakeLists.txt  README.md  report.txt
egos/: CMakeLists.txt  Makefile  Makefile.cache_test  log.txt  macho_cvt  report.txt  script.bat  trace  trace.txt  trace1.txt  trace4.txt  trace5.txt  trace6.txt
egos/apps/: loop.c  mt.c
egos/grass/: main.c  process.c  process.h  procsys.c
egos/grass/block/: block_store.h  checkdisk.c  clockdisk.c  fatdisk.c  fatdisk.h  grass.h  statdisk.c  treedisk.c
egos/shared/: queue.c
egos/test/cache_test/: block_store.c  trace.c  tracedisk.c
egos/traces/: trace2.txt  trace3.txt
p0/: a.out  node.h  queue.c  queue.h  queue.h.gch  test_queue.c
