cmake_minimum_required(VERSION 3.9)
project(egos)

set(CMAKE_CXX_STANDARD 11)

add_executable(egos
        apps/cat.c
        apps/chmod.c
        apps/cp.c
        apps/echo.c
        apps/ed.c
        apps/init.c
        apps/kill.c
        apps/login.c
        apps/loop.c
        apps/ls.c
        apps/mkdir.c
        apps/mt.c
        apps/passwd.c
        apps/pwd.c
        apps/pwdsvr.c
        apps/pwdsvr.h
        apps/shell.c
        earth/clock.c
        earth/clock.h
        earth/devdisk.c
        earth/devdisk.h
        earth/devtty.c
        earth/devtty.h
        earth/devudp.c
        earth/devudp.h
        earth/earth.h
        earth/intr.c
        earth/intr.h
        earth/log.c
        earth/log.h
        earth/mem.c
        earth/mem.h
        earth/myalloc.c
        earth/myalloc.h
        earth/prot.c
        earth/prot.h
        earth/tlb.c
        earth/tlb.h
        grass/block/block_store.h
        grass/block/cachedisk.c
        grass/block/checkdisk.c
        grass/block/clockdisk.c
        grass/block/debugdisk.c
        grass/block/fatdisk.c
        grass/block/fatdisk.h
        grass/block/filedisk.c
        grass/block/grass.h
        grass/block/partdisk.c
        grass/block/protdisk.c
        grass/block/raid0disk.c
        grass/block/raid1disk.c
        grass/block/ramdisk.c
        grass/block/statdisk.c
        grass/block/treedisk.c
        grass/block/treedisk.h
        grass/block/treedisk_chk.c
        grass/blkfilesvr.c
        grass/blocksvr.c
        grass/blocksvr.h
        grass/dirsvr.c
        grass/disksvr.c
        grass/egos.h
        grass/exec.h
        grass/main.c
        grass/process.c
        grass/process.h
        grass/procsys.c
        grass/ramfilesvr.c
        grass/spawnsvr.c
        grass/ttysvr.c
        lib/assert.h
        lib/crt0.c
        lib/ctype.c
        lib/ctype.h
        lib/egos.h
        lib/end.c
        lib/exec.c
        lib/grass_stdio.h
        lib/grass_stdlib.h
        lib/malloc.c
        lib/malloc.h
        lib/memchan.c
        lib/memchan.h
        lib/print.c
        lib/print.h
        lib/sha256.c
        lib/sha256.h
        lib/stdio.c
        lib/stdlib.c
        lib/string.c
        lib/string.h
        lib/syscall.c
        shared/block.c
        shared/block.h
        shared/context.h
        shared/dir.c
        shared/dir.h
        shared/ema.c
        shared/ema.h
        shared/file.c
        shared/file.h
        shared/queue.c
        shared/queue.h
        shared/spawn.c
        shared/spawn.h
        shared/syscall.h
        tools/cpr.c
        tools/elf_cvt.c
        tools/macho_cvt.c)
